xliff-22/test-suite/core/invalid/bad_MissingReorderFirstNo.xlf
<?xml version="1.0"?>
<xliff xmlns="urn:oasis:names:tc:xliff:document:2.2" version="2.2" srcLang="en">
 <file id="f1">
  <unit id="1">
   <segment>
    <source><ph id="1" canReorder="no" canDelete="no" canCopy="no"/>text <ph id="2"/></source>
   </segment>
  </unit>
 </file>
</xliff>
